<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="discretos.tec.hammingalgorithm.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/HexInput"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/HexDigit0"
            android:minWidth="40sp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxLength="3"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/ParityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Parity"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/dynamic_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toEndOf="@+id/ParityLabel"/>
        </RelativeLayout>

        <Button
            android:id="@+id/EncodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/encodeColor"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/encode"
            android:textSize="50sp"
            android:textStyle="bold"
            android:fontFamily="casual" />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>
